# BoarMuscle

./: CMakeLists.txt  build.sh  init.sh  vcpkg.json
demo/: graphical_manager.cpp  graphical_manager.hpp  main.cpp  sdl_manager.cpp  sdl_manager.hpp
lib/: CMakeLists.txt  collisions.cpp  collisions.hpp  geometry.hpp  vector.hpp
